<resources>
    <string name="app_name">HCM bts id</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>v
    <string name="forgot_password">
        <u>Forgot Password ?</u>
    </string>
    <string name="prompt_nip">NIP</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position_dummy_tv">Calon Senior Mobile Developer</string>
    <string name="name_dummy_tv">Teuku Hashrul</string>
    <string name="account_info">Account Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="my_projects">Projects</string>
    <string name="item_ProjectName">PT GasEmas</string>
    <string name="title_activity_project_detail_">ProjectDetail_Activity</string>
    <string name="project_detail">Project Detail</string>
    <string name="login_text">Login</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
