<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.hcmbtsid.ui.forgotPassword.ForgotPassword"
        android:background="@drawable/background_test1"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="316dp"
            android:layout_height="274dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            android:layout_marginTop="272dp" android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:textColor="@color/black_1"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.048"

                android:fontFamily="sans-serif-condensed-medium"

                tools:layout_editor_absoluteY="-2dp"/>


        <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:selectAllOnFocus="true"
                app:layout_constraintHorizontal_bias="0.6"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.192"

                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="sans-serif-condensed-medium"

        />

        <EditText
                android:id="@+id/nip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nip"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="88dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.201"

                android:background="@drawable/rounded_edittext_background"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="sans-serif-condensed-medium"

                app:layout_constraintHorizontal_bias="0.6"/>

        <Button
                android:id="@+id/forgot_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/white"
                android:text="@string/action_sign_in"
                android:background="@drawable/rounded_shape_button"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.961"

                android:paddingLeft="@dimen/btn_PaddingLR"
                android:paddingRight="@dimen/btn_PaddingLR"
                android:fontFamily="sans-serif-condensed-medium"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>