<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.hcmbtsid.ui.menu.Profile_Fragment"
        android:id="@+id/constraintLayout2">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="422dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/constraintLayout3">
        <RelativeLayout
                android:layout_width="115dp"
                android:layout_height="106dp"
                android:layout_marginEnd="153dp" android:layout_marginRight="153dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="154dp" android:layout_marginStart="154dp"
                app:layout_constraintBottom_toTopOf="@+id/name_tv2">

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_profilepic"
                    app:civ_border_color="#EEEEEE"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#8BC34A"
                    android:id="@+id/profilePic_iv"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" android:layout_marginRight="0dp"
                    android:layout_marginEnd="0dp" android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"/>
            <Button
                    android:background="@drawable/circle_add_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="74dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="79dp"
                    android:layout_marginStart="79dp"
                    android:layout_alignParentLeft="true"

                    android:id="@+id/btn_updatePhoto"
            />

        </RelativeLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_tv2"
                android:text="@string/name_dummy_tv"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.718"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"

                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" app:layout_constraintHorizontal_bias="0.503"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_dummy_tv"
                android:id="@+id/position_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/name_tv2"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">


        <TextView
                android:text="@string/account_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.008"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:textColor="@color/white"

                android:textStyle="bold"
                android:textSize="24sp" android:id="@+id/textView2"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_Profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:listitem="@layout/profile_recycleview_item_row"

                android:scrollbars="vertical"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_edit">
        </androidx.recyclerview.widget.RecyclerView>
        <Button
                android:text="@string/edit_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"

                android:background="@drawable/rounded_shape_button"
                android:textColor="@color/white"
                android:shadowColor="@color/black_1"

                app:layout_constraintHorizontal_bias="0.0"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>