<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.hcmbtsid.ui.login.LoginActivity" android:background="@drawable/ic_background_login">
    <ImageView
            android:layout_width="128dp"
            android:layout_height="127.69dp"
            android:id="@+id/imageView"
            app:srcCompat="@drawable/logo_bts_id_invision"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="122dp"
            android:layout_marginStart="122dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="144dp"
            android:layout_marginRight="144dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="190dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="322dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="280dp" android:layout_height="35dp"
                                                       android:background="@drawable/login_edittext_invision"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       android:layout_marginLeft="46dp"
                                                       android:layout_marginStart="46dp"
                                                       android:layout_marginTop="355dp"
                                                       app:layout_constraintTop_toTopOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
                                                       app:layout_constraintBottom_toBottomOf="parent"
                                                       android:layout_marginBottom="295dp">

        <ImageView android:layout_width="12dp" android:layout_height="12dp"
                   app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="252dp"
                   android:layout_marginRight="252dp" app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                   android:layout_marginBottom="12dp" app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginTop="11dp" app:layout_constraintTop_toTopOf="parent"
                   app:srcCompat="@drawable/ic_username"/>

        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/grey"
                  android:textSize="@dimen/login_edittext"
                  android:id="@+id/username"
                  android:background="@null"
                  android:fontFamily="@font/helvetica_neue_lt"
                  android:hint="@string/account_info" android:textColorHint="@color/grey"
                  android:layout_marginStart="36dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
                  android:layout_marginBottom="11dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginRight="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="280dp" android:layout_height="35dp"
            android:background="@drawable/login_edittext_invision"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="46dp" android:layout_marginStart="46dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
            android:layout_marginTop="401dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="249dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout5">

        <ImageView android:layout_width="12dp" android:layout_height="12dp" app:srcCompat="@drawable/ic_password"
                   app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="252dp"
                   android:layout_marginRight="252dp" app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                   android:layout_marginBottom="12dp" app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginTop="11dp" app:layout_constraintTop_toTopOf="parent"
                   android:id="@+id/imageView2"/>

        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:textColor="@color/grey"
                  android:id="@+id/password"
                  android:fontFamily="@font/helvetica_neue_lt"
                    android:background="@null"
                  android:textSize="@dimen/login_edittext"
                  android:hint="@string/account_info" android:textColorHint="@color/grey"
                  android:layout_marginStart="36dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
                  android:layout_marginBottom="11dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.4" android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toStartOf="@+id/textView20" android:layout_marginRight="8dp"/>
        <TextView
                android:text="Show"
                android:textSize="8sp"
                android:fontFamily="@font/helvetica_neue_lt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="247dp" android:layout_marginStart="247dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp" app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginBottom="12dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="13dp" app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/grey"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
            android:id="@+id/login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/grey"
            android:text="@string/login_text"
            android:background="@drawable/rounded_shape_button"
            android:fontFamily="@font/helvetica_neue_lt"
            android:textStyle="bold"
            android:layout_marginStart="46dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="46dp"
            android:layout_marginTop="482dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="68dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="168dp"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpassword"
            android:textSize="10sp"
            android:textColor="@color/grey"
            android:fontFamily="sans-serif-condensed-medium"
            android:clickable="true"
            android:layout_marginStart="146dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="146dp"
            android:layout_marginEnd="140dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="140dp"
            android:layout_marginBottom="145dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="540dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <ProgressBar
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:layout_editor_absoluteY="274dp" tools:layout_editor_absoluteX="64dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>